--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,102 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+    --font-family-primary: "IBM Plex Mono", monospace;
+
+    --color-primary-100: #CD8CFF;
+    --color-primary-400: #8F00FF;
+
+    --color-neutral-100: #F1F0F1;
+    --color-neutral-900: #0F0E10;
+    /*--color-neutral-900: #000001ff;*/
+
+    --font-size-400: 1rem;
+    --font-size-500: 1.5rem;
+    --font-size-600: 2rem;
+    --font-size-700: 4rem;
+
+    --font-weight-regular: 400;
+    --font-weight-medium: 500;
+    --font-weight-semi-bold: 500;
+    --font-weight-bold: 700;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media (min-width: 50em) {
+    :root {
+        /* later */
+    }
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+html {
+    -moz-text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+    text-size-adjust: none;
+}
+
+html, body {
+    height: 100%;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    line-height: 1.5;
+}
+
+img,
+picture,
+svg {
+    max-width: 100%;
+    display: block;
+}
+
+ul[role='list'],
+ol[role='list'] {
+    list-style: none;
+}
+
+a {
+    color: var(--color-neutral-100);
+    text-decoration: none;
+}
+
+/* could be useful later */
+/*:target {*/
+/*    scroll-margin-block: 5ex;*/
+/*}*/
+
+.canvas-html {
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+}
+
+/* document later */
+.canvas-html div {
+    transform: none !important;
+}
+
+* {
+    font-family: var(--font-family-primary);
+    color: var(--color-neutral-100);
+}
+
+.background-primary {
+    background-color: var(--color-neutral-900);
+}
+
+.sticky {
+    position: sticky;
+    top: 0;
+}
+
+.blur {
+    backdrop-filter: blur(10px);
 }
