--- a/src/App.css
+++ b/src/App.css
@@ -2,23 +2,63 @@
     height: 100vh;
 }
 
+a {
+    color: var(--color-neutral-100);
+    text-decoration: none;
+}
+
+.nav-list {
+    list-style: none;
+}
+
+.nav-list a {
+    font-size: var(--font-size-400);
+    font-weight: var(--font-weight-regular);
+}
+.nav-list a:hover {
+    font-weight: var(--font-weight-semi-bold);
+}
+
 .button {
-    width: 270px;
-    padding: 18px 53px;
-    border-radius: 60px;
+    position: relative;
+    z-index: 0;
+    width: 263px;
+    height: 50px;
+    border-radius: 30px;
     font-size: var(--font-size-400);
     font-weight: var(--font-weight-bold);
-    color: var(--color-neutral-900);
+    color: var(--color-neutral-100);
+    border: none;
     cursor: pointer;
+    transition: all 0.3s ease-out;
 }
-.button:hover,
-.button:focus-visible {
 
+.button-gradient {
+    background-image: linear-gradient(#A789FA, #3A03CA);
+}
+
+.button-gradient::before {
+    border-radius: 30px;
+    z-index: -1;
+    content: "";
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(#8052FF, #6330E8);
+    opacity: 1;
+    transition: opacity 1s;
+}
+
+.button-gradient:hover::before {
+    opacity: 0;
 }
 
 .section-wrapper {
     --max-width: 1680px;
-    --padding: 60px;
+    --padding: 240px;
 
     width: min(var(--max-width), 100% - var(--padding));
     margin-inline: auto;
@@ -32,20 +72,34 @@
     font-weight: var(--font-weight-semi-bold);
 }
 
-.section-subheader-number {
-    font-size: var(--font-size-600);
-    font-weight: var(--font-weight-medium);
-    line-height: 1.2;
-}
-
 .section-subheader {
+    margin-bottom: 16px;
     font-size: var(--font-size-600);
     font-weight: var(--font-weight-semi-bold);
+    line-height: 1.3;
 }
 
 .section-text {
     font-size: var(--font-size-400);
     font-weight: var(--font-weight-medium);
     line-height: 1.6;
+}
+
+@media (max-width: 1320px){
+    .section-wrapper {
+        --max-width: 1252px;
+        --padding: 48px;
+
+        width: min(var(--max-width), 100% - var(--padding));
+        margin-inline: auto;
+    }
+    .section-header {
+        margin-top: 150px;
+        margin-bottom: 70px;
+        font-size: var(--font-size-600);
+    }
+    .section-subheader {
+        font-size: var(--font-size-500);
+    }
 }
 
