--- a/src/components/Community/Community.css
+++ b/src/components/Community/Community.css
@@ -7,32 +7,34 @@
 .cta {
     display: grid;
     align-content: center;
-    gap: 60px;
+    gap: 50px;
 }
 
-@media (max-width: 1933px) {
+@media (max-width: 1440px) {
     .community-content {
-        padding: 54px 95px 150px;
+        max-width: 1326px;
         display: flex;
         justify-content: space-between;
     }
 }
 
-@media (max-width: 1561px) {
+@media (max-width: 1200px) {
     .community-content {
         padding: 54px 24px 150px;
         flex-direction: column;
         gap: 40px;
     }
+
     .community-content * {
         margin-inline: auto;
     }
+
     .cta {
         text-align: center;
         gap: 40px;
     }
+
     .community-button {
         width: min(380px, 100%);
-
     }
 }
