--- a/src/components/Contact/Footer.css
+++ b/src/components/Contact/Footer.css
@@ -22,7 +22,7 @@
     gap: 62px;
 }
 
-@media (max-width: 1321px) {
+@media (max-width: 1440px) {
     .footer-nav-list {
         gap: 130px;
     }
@@ -34,13 +34,13 @@
     }
 }
 
-@media (max-width: 957px) {
+@media (max-width: 887px) {
     .footer-wrapper {
         flex-direction: column;
         align-items: center;
         gap: 50px;
     }
-    a:has(.footer-logo) {
+    .footer-logo {
         transform: translateX(-58.5%);
     }
     .social-media {
@@ -53,6 +53,18 @@
         display: flex;
         flex-direction: column;
         list-style: none;
+        gap: 40px;
+    }
+}
+@media (max-width: 428px) {
+    .footer-logo {
+        transform: translateX(0);
+    }
+    .social-media {
+        transform: translateX(0);
+    }
+    .footer-nav-list {
+        flex-direction: column;
         gap: 40px;
     }
 }
