--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 75px;
     z-index: 100;
 }
 .header-nav-list {
@@ -12,76 +11,14 @@
 }
 
 .header-logo {
-    width: 175px;
-    height: 26px;
-}
-.mobile-nav-toggle {
-    display: none;
-}
-.header-button-mobile {
-    display: none;
+    max-height: 26px;
 }
 
-@media (max-width: 1470px) {
+@media (max-width: 861px) {
     .header-logo {
         content: url("../../assets/images/header/logo-accent.png");
-        width: 26px;
-    }
-    .header-button {
-        width: 163px;
+        width: 32px;
+        min-height: 32px;
     }
 }
 
-@media (max-width: 956px) {
-    .header-button {
-        display: none;
-    }
-    .header-button-mobile {
-        display: block;
-        margin-inline: auto;
-    }
-    .header-wrapper {
-        background-color: var(--color-neutral-900);
-    }
-    .header-nav {
-        display: flex;
-        flex-direction: column;
-        position: fixed;
-        top: 95px;
-        left: 0;
-        width: 100%;
-        height: 100vh;
-        background-color: var(--color-neutral-900);
-        transform: translateX(-100%);
-        opacity: 0;
-        visibility: hidden;
-        transition: transform 0.6s ease, opacity 0.6s ease, visibility 0s 0.6s;
-    }
-    .header-nav.visible {
-        transform: translateX(0);
-        opacity: 1;
-        visibility: visible;
-        transition: transform 0.6s ease, opacity 0.6s ease, visibility 0s 0s;
-    }
-    .header-nav-list {
-        margin-top: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        text-align: center;
-        gap: 2rem;
-    }
-    .mobile-nav-toggle {
-        display: block;
-        cursor: pointer;
-        background-color: transparent;
-        border: 0;
-    }
-
-    .visible {
-        display: block;
-    }
-    .hidden {
-        display: none;
-    }
-}
