--- a/src/components/Solutions/Solutions.css
+++ b/src/components/Solutions/Solutions.css
@@ -1,12 +1,13 @@
 .solutions-content {
     display: grid;
-    grid-template-columns: 1fr 1fr 3fr;
+    grid-template-columns: 334px 334px 680px;
     grid-template-rows: 1fr 1fr;
     gap: 20px;
+    justify-content: center;
 }
 .solution-card {
     position: relative;
-    width: 334px;
+    max-width: 334px;
     height: 334px;
     background-color: rgba(93, 93, 93, 0.09);
     padding: 24px 30px 0;
@@ -16,7 +17,7 @@
 
 .solution-image {
     align-content: center;
-    max-width: 965px;
+    max-width: 680px;
     height: 688px;
     background-color: var(--color-primary-400);
     border-radius: 30px;
@@ -24,7 +25,7 @@
         width: 295px;
         margin-inline: auto;
     }
-    grid-column: 3/6;
+    grid-column: 3/4;
     grid-row: 1/3;
 }
 
@@ -38,47 +39,54 @@
 }
 
 .solution-card #illustration-button-top {
-    right: 132px;
+    left: -1.5em;
     bottom: 132px;
     transform: rotate(15deg);
 }
-.solution-card #illustration-button-top:hover {
-    transform: scale(1.1) rotate(15deg);
-}
 .solution-card #illustration-button-bottom {
-    left: 95px;
+    right: -1.5em;
     bottom: 22px;
     transform: rotate(-15deg);
+}
+.solution-card #illustration-button-top:hover {
+    transform: scale(1.1) rotate(15deg);
 }
 .solution-card #illustration-button-bottom:hover {
     transform: scale(1.1) rotate(-15deg);
 }
 
-.solution-card#top-right img {
-    width: 216px;
+.solution-card#solution-card-2 img {
     position: absolute;
+    width: 216px;
     right: 0;
     bottom: 8px;
 }
 
-.solution-card#bottom-right img {
+.solution-card#solution-card-4 img {
     position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     bottom: 40px;
 }
 
 .payment-methods-static {
     position: absolute;
+    width: 90%;
+    left: 50%;
+    transform: translateX(-50%);
     bottom: 34px;
     display: flex;
-    gap: 45px;
+    justify-content: space-between;
 }
 
 .payment-methods-carousel {
     position: absolute;
+    overflow: hidden;
     bottom: 88px;
     display: flex;
-    gap: 53px;
+    gap: max(53px, 4.80943738vw);
 }
+
 .payment-methods-carousel img {
     width: 25px;
 }
@@ -91,46 +99,67 @@
 
 @keyframes slide-1 {
     from {
-        left: 53px;
+        left: max(53px, 4.80943738vw);
     }
     to {
-        left: calc(-100%);
-    }
-}
-@keyframes slide-2 {
-    from {
-        left: calc(100px + 100%);
-    }
-    to {
-        left: 53px;
+        left: calc(-125px - 4 * max(53px, 4.80943738vw));
     }
 }
 
-@media (max-width: 1124px){
+@keyframes slide-2 {
+    from {
+        left: calc(125px + 6 * max(53px, 4.80943738vw));
+    }
+    to {
+        left: max(53px, 4.80943738vw);
+    }
+}
+
+@media (max-width: 1440px){
     .solutions-content {
         display: grid;
+        max-width: 1042px;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: 334px 400px;
+        margin-inline: auto;
     }
     .solution-image img {
         content: url('../../assets/images/solutions/phone-half.png');
-        max-width: 295px;
-        margin-inline: auto;
+    }
+    .solution-card#solution-card-4 img {
+        bottom: 5em;
     }
     .solution-image {
-        max-width: 708px;
+        max-width: 100%;
+        width: 100%;
         height: 400px;
         align-content: end;
         grid-column: 2/4;
         grid-row: 2/3;
     }
     .solution-card {
-        max-width: 334px;
-        width: auto;
-        min-height: 100%;
+        max-width: 100%;
+        height: 100%;
     }
 }
-@media (max-width: 957px){
+@media (max-width: 710px) {
+    .solutions-content {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 334px);
+    }
+    .solution-image {
+        height: min(85vw, 400px);
+        grid-column: 1/3;
+        grid-row: 3/4;
+    }
+    .solution-card {
+        height: 334px;
+    }
+    .solution-card#solution-card-4 img {
+        bottom: 2em;
+    }
+}
+@media (max-width: 621px){
     .solutions-content {
         display: flex;
         flex-direction: column;
@@ -139,19 +168,26 @@
         margin-inline: auto;
     }
     .solution-image img {
-        content: url('../../assets/images/solutions/phone-half.png');
-        max-width: 295px;
         margin-inline: auto;
     }
     .solution-image {
-        width: 380px;
-        height: 400px;
+        max-width: 380px;
+        height: min(100vw, 378px);
+        padding-inline: 20px;
     }
     .solution-card {
-        max-width: min(380px, 100%);
-        width: min(380px, 100%);
+        max-width: 380px;
+        width: 100%;
+        min-height: 280px;
+    }
+    .solution-card#solution-card-2 img {
+        position: relative;
+        top: 50%;
+        transform: translateY(-75%);
+        padding-block: 10px;
+        margin-inline: auto;
+    }
+    .solution-card#solution-card-4 img {
+        bottom: 2.5em;
     }
 }
-
-
-
