--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
     height: 100vh;
 }
 
+.popup {
+    opacity: 0;
+    transition: opacity 0.4s ease;
+}
+
+.popup.visible {
+    opacity: 1;
+}
+
 a {
     color: var(--color-neutral-100);
     text-decoration: none;
