--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,13 @@
 }
 
 .popup {
+    display: none;
     opacity: 0;
     transition: opacity 0.4s ease;
 }
 
 .popup.visible {
+    display: block;
     opacity: 1;
 }
 
