--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,15 @@
 }
 
 .popup {
-    display: none;
+    visibility: hidden;
     opacity: 0;
-    transition: opacity 0.4s ease;
+    pointer-events: none;
+    transition: opacity 0.4s ease, visibility 0.4s ease;
 }
 
 .popup.visible {
-    display: block;
+    pointer-events: auto;
+    visibility: visible;
     opacity: 1;
 }
 
