--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
 .app {
     height: 100vh;
+    position: relative;
+}
+
+body html {
+    overflow: hidden;
+}
+
+.fixed {
+    position: fixed;
+    width: 100%;
+    top: 0;
 }
 
 .popup {
@@ -46,20 +57,20 @@ a {
 }
 
 .button-gradient {
-    background-image: linear-gradient(#A789FA, #3A03CA);
+    background-image: linear-gradient(#a789fa, #3a03ca);
 }
 
 .button-gradient::before {
     border-radius: 30px;
     z-index: -1;
-    content: "";
+    content: '';
     display: inline-block;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(#8052FF, #6330E8);
+    background-image: linear-gradient(#8052ff, #6330e8);
     opacity: 1;
     transition: opacity 1s;
 }
@@ -77,7 +88,6 @@ a {
 }
 
 .section-header {
-    margin-top: 160px;
     margin-bottom: 90px;
     text-align: center;
     font-size: var(--font-size-700);
@@ -97,7 +107,7 @@ a {
     line-height: 1.6;
 }
 
-@media (max-width: 861px){
+@media (max-width: 861px) {
     .section-wrapper {
         --max-width: 1252px;
         --padding: 48px;
@@ -106,7 +116,6 @@ a {
         margin-inline: auto;
     }
     .section-header {
-        margin-top: 150px;
         margin-bottom: 70px;
         font-size: var(--font-size-600);
     }
@@ -117,4 +126,3 @@ a {
         padding: 15px 25px;
     }
 }
-
