--- a/src/components/Solutions/Solutions.css
+++ b/src/components/Solutions/Solutions.css
@@ -16,6 +16,7 @@
 }
 
 .solution-image {
+    overflow: hidden; /* подозреваю что сафари не рендерил content раньше*/
     align-content: center;
     max-width: 680px;
     height: 688px;
@@ -123,13 +124,11 @@
         grid-template-rows: 334px 400px;
         margin-inline: auto;
     }
-    .solution-image img {
-        content: url('../../assets/images/solutions/phone-half.png');
-    }
     .solution-card#solution-card-4 img {
         bottom: 5em;
     }
     .solution-image {
+        padding-top: 42px; /* подозреваю что сафари не рендерил content раньше*/
         max-width: 100%;
         width: 100%;
         height: 400px;
@@ -192,6 +191,7 @@
         margin-inline: auto;
     }
     .solution-image {
+        padding-top: 30px; /* подозреваю что сафари не рендерил content раньше*/
         max-width: 380px;
         height: min(100vw, 378px);
         padding-inline: 20px;
